# scraper

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  alembic.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
migrations/: env.py  script.py.mako
migrations/versions/: 97c39cae2bcb_initial_migration.py
notebooks/: sam_gov_opportunities_and_descriptions.ipynb
output/sam_gov_scrapes/: 2025-05-16__1747435710__1747522110.json
rfp_scraper/: __init__.py  constants.py  logging.py  secrets.py
rfp_scraper/cli/: __main__.py
rfp_scraper/db/: __init__.py
rfp_scraper/db/models/: __init__.py
rfp_scraper/debug/: enhanced_breakpoint.py
rfp_scraper/services/: output_directories.py  scrape_sam_gov.py
tests/: conftest.py
tests/services/: conftest.py  test_scrape_sam_gov.py
